Bug 420027 - Status bar unnecessarily says "Unknown size" when an entry under certain sections of places panel is selected
Summary: Status bar unnecessarily says "Unknown size" when an entry under certain sect...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: bars: status (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-13 13:22 UTC by Patrick Silva
Modified: 2020-06-08 05:49 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08
Sentry Crash Report:


Attachments
"Remote" section (106.16 KB, image/png)
2020-04-13 13:23 UTC, Patrick Silva
Details
"Recent" section (148.46 KB, image/png)
2020-04-13 13:23 UTC, Patrick Silva
Details
"Search for" section (107.00 KB, image/png)
2020-04-13 13:24 UTC, Patrick Silva
Details
"Tags" section (189.70 KB, image/png)
2020-04-13 13:25 UTC, Patrick Silva
Details
opening an archive as folder with Dolphin (59.06 KB, image/png)
2020-05-27 17:11 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-04-13 13:22:30 UTC
STEPS TO REPRODUCE
1. open Dolphin
2. select an entry under "Remote", "Recent", "Search for" or "Tags" sections of places panel
3. 

OBSERVED RESULT
status bar says "Unknown size". See the attached screenshots please.

EXPECTED RESULT
Dolphin shows no local/remote location when we click on an entry under the sections mentioned above. Dolphin only shows links to flies stored in different locations or links to some features. Therefore, I think that instead of saying "Unknown size", the status bar can just omit size information.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.1
Comment 1 Patrick Silva 2020-04-13 13:23:28 UTC
Created attachment 127498 [details]
"Remote" section
Comment 2 Patrick Silva 2020-04-13 13:23:57 UTC
Created attachment 127499 [details]
"Recent" section
Comment 3 Patrick Silva 2020-04-13 13:24:24 UTC
Created attachment 127500 [details]
"Search for" section
Comment 4 Patrick Silva 2020-04-13 13:25:06 UTC
Created attachment 127501 [details]
"Tags" section
Comment 5 Kai Uwe Broulik 2020-04-14 09:51:44 UTC
Indeed, it should probably just hide
Comment 6 Patrick Silva 2020-05-27 17:11:24 UTC
Created attachment 128843 [details]
opening an archive as folder with Dolphin

Status bar also says "Unknown size" when I open an archive (tar.gz, zip and 7z) as folder.
Comment 7 Méven Car 2020-05-28 06:24:46 UTC
(In reply to Patrick Silva from comment #6)
> Created attachment 128843 [details]
> opening an archive as folder with Dolphin
> 
> Status bar also says "Unknown size" when I open an archive (tar.gz, zip and
> 7z) as folder.

That's a different bug. both cases can't be fixed together.
It concerns the related ioslaves.
Comment 8 Patrick Silva 2020-05-29 13:29:17 UTC
Tnank you Méven.
Reported as bug 422226.
Comment 9 Méven Car 2020-05-29 13:54:54 UTC
There is a tentative patch at https://phabricator.kde.org/D29213
Comment 10 Méven Car 2020-06-08 05:49:49 UTC
Git commit bf4388c75525cffd150a51e6c4e0455f60db520f by Méven Car.
Committed on 08/06/2020 at 05:49.
Pushed by meven into branch 'master'.

Status bar: Hide the space free bar when size is unknown

Summary:
Related: bug 422226
FIXED-IN: 20.08

Test Plan: {F8312398}

Reviewers: #dolphin, ngraham, broulik, #vdg, elvisangelaccio

Reviewed By: #dolphin, ngraham, #vdg, elvisangelaccio

Subscribers: elvisangelaccio, kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D29213

M  +4    -2    src/statusbar/dolphinstatusbar.cpp
M  +3    -1    src/statusbar/spaceinfoobserver.cpp
M  +1    -0    src/statusbar/spaceinfoobserver.h
M  +45   -18   src/statusbar/statusbarspaceinfo.cpp
M  +6    -0    src/statusbar/statusbarspaceinfo.h

https://invent.kde.org/system/dolphin/commit/bf4388c75525cffd150a51e6c4e0455f60db520f